--- a/.github/workflows/test-linux-rpm-free.yml
+++ b/.github/workflows/test-linux-rpm-free.yml
@@ -10,8 +10,6 @@ jobs:
   rpm:
     name: Create linux rpm
     runs-on: ubuntu-22.04
-    container:
-      image: fedora:40
     steps:
       - uses: actions/checkout@v5
 
@@ -23,27 +21,21 @@ jobs:
 
       - name: Install dependencies for Linux
         run: |
-          sudo dnf update -y && sudo dnf upgrade -y
-          sudo dnf install -y curl libcurl-devel which git unzip xz zip mesa-libGLU
-          sudo dnf install -y clang cmake ninja-build pkgconf-pkg-config gtk3-devel xz-devel libstdc++-devel
-          sudo dnf install -y rpm-build patchelf
+          sudo apt-get update -y && sudo apt-get upgrade -y
+          sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
+          sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
+          sudo apt-get install -y rpm patchelf
 
-      - name: Install libappindicator-gtk3-devel
+      - name: Install ayatana-appindicator3-0.1
         run: |
           # used by tray_manager
-          sudo dnf install -y libappindicator-gtk3-devel
-
-      - name: Install jq
-        run: sudo dnf install -y jq
+          sudo apt-get install -y libayatana-appindicator3-dev
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
           flutter-version: '3.35.5'
-
-      - name: Fix git safe directory issue
-        run: git config --global --add safe.directory "$FLUTTER_ROOT"
 
       - name: Flutter doctor -v
         run: flutter doctor -v
