--- a/.github/workflows/test-linux-rpm-pro-arm64.yml
+++ b/.github/workflows/test-linux-rpm-pro-arm64.yml
@@ -55,7 +55,8 @@ jobs:
           cp "$(pwd)/linux/pro/my_application.cc" "$(pwd)/linux/runner/my_application.cc"
 
       - name: Install fastforge
-        run: dart pub global activate fastforge
+        run: |
+          dart pub global activate --source git https://github.com/kjxbyz/fastforge --git-ref rpm --git-path packages/fastforge
 
       - name: Install yq
         run: |
