ci: add changelog

--- a/linux/packaging/rpm/make_config-pro.yaml
+++ b/linux/packaging/rpm/make_config-pro.yaml
@@ -27,6 +27,8 @@ keywords:
 
 generic_name: PicGuard Pro
 
+changelog: https://github.com/picguard/picguard/blob/main/CHANGELOG.md
+
 categories:
   - Utility
 
