--- a/linux/packaging/rpm/make_config.yaml
+++ b/linux/packaging/rpm/make_config.yaml
@@ -26,6 +26,8 @@ keywords:
 
 generic_name: PicGuard
 
+changelog: https://github.com/picguard/picguard/blob/main/CHANGELOG.md
+
 categories:
   - Utility
 
