--- a/linux/packaging/rpm/make_config.yaml
+++ b/linux/packaging/rpm/make_config.yaml
@@ -26,12 +26,17 @@ keywords:
 
 generic_name: PicGuard
 
+changelog: https://github.com/picguard/picguard/blob/main/CHANGELOG.md
+
 categories:
   - Utility
 
 # direct dependencies required by the application
 # https://docs.redhat.com/zh-cn/documentation/red_hat_enterprise_linux/8/html/packaging_and_distributing_software/working-with-spec-files_packaging-software
 requires:
-  - libayatana-appindicator3-1
+  - libappindicator-gtk3
+
+build_requires:
+  - libcurl
 
 startup_notify: true
