ci: update build_requires

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2184,8 +2184,9 @@ jobs:
       - name: Install dependencies for Linux
         run: |
           sudo apt-get update -y && sudo apt-get upgrade -y
-          sudo apt-get install -y curl libcurl4-gnutls-dev git unzip xz-utils zip libglu1-mesa
+          sudo apt-get install -y curl git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
+          sudo apt-get install -y rpm patchelf
 
       - name: Install ayatana-appindicator3-0.1
         run: |
@@ -2264,7 +2265,7 @@ jobs:
       - name: Install dependencies for Linux
         run: |
           sudo apt-get update -y && sudo apt-get upgrade -y
-          sudo apt-get install -y curl libcurl4-gnutls-dev git unzip xz-utils zip libglu1-mesa
+          sudo apt-get install -y curl git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
           sudo apt-get install -y rpm patchelf
 
@@ -2357,8 +2358,9 @@ jobs:
       - name: Install dependencies for Linux
         run: |
           sudo apt-get update -y && sudo apt-get upgrade -y
-          sudo apt-get install -y curl libcurl4-gnutls-dev git unzip xz-utils zip libglu1-mesa
+          sudo apt-get install -y curl git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
+          sudo apt-get install -y rpm patchelf
 
       - name: Install ayatana-appindicator3-0.1
         run: |
@@ -2444,7 +2446,7 @@ jobs:
       - name: Install dependencies for Linux
         run: |
           sudo apt-get update -y && sudo apt-get upgrade -y
-          sudo apt-get install -y curl libcurl4-gnutls-dev git unzip xz-utils zip libglu1-mesa
+          sudo apt-get install -y curl git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
           sudo apt-get install -y rpm patchelf
 
