ci: remove base-href

--- a/.github/workflows/release-web.yml
+++ b/.github/workflows/release-web.yml
@@ -40,7 +40,7 @@ jobs:
         run: flutter pub get
 
       - name: Build flutter
-        run: flutter build web --dart-define-from-file=.env --dart-define GIT_COMMIT_SHA="$GIT_COMMIT_SHA" --target lib/main_free.dart --base-href /play/
+        run: flutter build web --dart-define-from-file=.env --dart-define GIT_COMMIT_SHA="$GIT_COMMIT_SHA" --target lib/main_free.dart
         env:
           GIT_COMMIT_SHA: ${{ github.sha }}
 
@@ -91,7 +91,7 @@ jobs:
       - name: Build flutter
         run: |
           cp -r $GITHUB_WORKSPACE/web/pro/* $GITHUB_WORKSPACE/web/
-          flutter build web --dart-define-from-file=.env --dart-define GIT_COMMIT_SHA="$GIT_COMMIT_SHA" --target lib/main_pro.dart --base-href /play/pro/
+          flutter build web --dart-define-from-file=.env --dart-define GIT_COMMIT_SHA="$GIT_COMMIT_SHA" --target lib/main_pro.dart
         env:
           GIT_COMMIT_SHA: ${{ github.sha }}
 
