--- a/windows/packaging/exe/make_config.yaml
+++ b/windows/packaging/exe/make_config.yaml
@@ -1,6 +1,6 @@
 app_id: APP_ID_PLACEHOLDER
 publisher_name: PUBLISHER_NAME_PLACEHOLDER
-publisher_url: https://www.picguard.app
+publisher_url: https://picguard.app
 display_name: PicGuard
 create_desktop_icon: true
 privileges_required: admin
