--- a/.github/workflows/test-windows-exe-free-portable.yml
+++ b/.github/workflows/test-windows-exe-free-portable.yml
@@ -74,8 +74,8 @@ jobs:
           $env:SENTRY_NATIVE_BACKEND = "breakpad"
           flutter build windows --dart-define-from-file=.env --target lib/main_free.dart
 
-      - name: Install @insco/enigma-virtualbox
-        run: npm i -g @insco/enigma-virtualbox
+      - name: Install @qiazo/enigma-virtualbox
+        run: npm i -g @qiazo/enigma-virtualbox
 
       - name: Generate EnigmaVB config file
         shell: pwsh
