--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -11,4 +11,4 @@ PRODUCT_NAME = PicGuard
 PRODUCT_BUNDLE_IDENTIFIER = com.kjxbyz.picguard
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 Insco. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 Qiazo. All rights reserved.
