ci: update actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3700,9 +3700,11 @@ jobs:
         run: |
           # https://stackoverflow.com/questions/15414678/how-to-decode-a-base64-string
           # https://stackoverflow.com/questions/66239147/pfx-encoded-and-back-to-pfx-in-powershell
-          # $certificatePath = "$env:RUNNER_TEMP\picguard.pfx"
+          # $env:certificatePath = "$env:RUNNER_TEMP\picguard.pfx"
           # $bytes = echo $env:WINDOWS_CERTIFICATE | %{[Convert]::FromBase64String($_)}
-          # [IO.File]::WriteAllBytes("$certificatePath", $bytes)
+          # [IO.File]::WriteAllBytes("$env:certificatePath", $bytes)
+          
+          # $certificatePassword = (Get-Item -Path Env:WINDOWS_CERTIFICATE_PASSWORD).Value
 
           $yamlFile = ".\pubspec.yaml"
           $yamlContent = Get-Content -Raw -Path $yamlFile
@@ -3711,7 +3713,6 @@ jobs:
           $identityName = (Get-Item -Path Env:WINDOWS_IDENTITY_NAME).Value
           $publisher = (Get-Item -Path Env:WINDOWS_PUBLISHER).Value
           $publisherName = (Get-Item -Path Env:WINDOWS_PUBLISHER_NAME).Value
-          # $certificatePassword = (Get-Item -Path Env:WINDOWS_CERTIFICATE_PASSWORD).Value
 
           # 使用 yq 更新多个字段
           $updatedYamlContent = echo $yamlContent | yq e ".msix_config.identity_name = `"$identityName`" | .msix_config.publisher = `"$publisher`" | .msix_config.publisher_display_name = `"$publisherName`" | del(.msix_config.certificate_path) | del(.msix_config.certificate_password)" -
@@ -3821,9 +3822,11 @@ jobs:
 
           # https://stackoverflow.com/questions/15414678/how-to-decode-a-base64-string
           # https://stackoverflow.com/questions/66239147/pfx-encoded-and-back-to-pfx-in-powershell
-          # $certificatePath = "$env:RUNNER_TEMP\picguard-pro.pfx"
+          # $env:certificatePath = "$env:RUNNER_TEMP\picguard-pro.pfx"
           # $bytes = echo $env:WINDOWS_CERTIFICATE_PRO | %{[Convert]::FromBase64String($_)}
-          # [IO.File]::WriteAllBytes("$certificatePath", $bytes)
+          # [IO.File]::WriteAllBytes("$env:certificatePath", $bytes)
+          
+          # $certificatePassword = (Get-Item -Path Env:WINDOWS_CERTIFICATE_PASSWORD_PRO).Value
 
           $yamlFile = ".\pubspec.yaml"
           $yamlContent = Get-Content -Raw -Path $yamlFile
@@ -3832,7 +3835,6 @@ jobs:
           $identityName = (Get-Item -Path Env:WINDOWS_IDENTITY_NAME_PRO).Value
           $publisher = (Get-Item -Path Env:WINDOWS_PUBLISHER_PRO).Value
           $publisherName = (Get-Item -Path Env:WINDOWS_PUBLISHER_NAME_PRO).Value
-          # $certificatePassword = (Get-Item -Path Env:WINDOWS_CERTIFICATE_PASSWORD_PRO).Value
 
           # 使用 yq 更新多个字段
           $updatedYamlContent = echo $yamlContent | yq e ".msix_config.display_name = `"PicGuard Pro`" | .msix_config.identity_name = `"$identityName`" | .msix_config.publisher = `"$publisher`" | .msix_config.publisher_display_name = `"$publisherName`" | del(.msix_config.certificate_path) | del(.msix_config.certificate_password)" -
