--- a/.github/workflows/test-windows-store-free.yml
+++ b/.github/workflows/test-windows-store-free.yml
@@ -74,9 +74,11 @@ jobs:
         run: |
           # https://stackoverflow.com/questions/15414678/how-to-decode-a-base64-string
           # https://stackoverflow.com/questions/66239147/pfx-encoded-and-back-to-pfx-in-powershell
-          $certificatePath = "$env:RUNNER_TEMP\picguard.pfx"
+          $env:certificatePath = "$env:RUNNER_TEMP\picguard.pfx"
           $bytes = echo $env:WINDOWS_CERTIFICATE | %{[Convert]::FromBase64String($_)}
-          [IO.File]::WriteAllBytes("$certificatePath", $bytes)
+          [IO.File]::WriteAllBytes("$env:certificatePath", $bytes)
+          
+          $certificatePassword = (Get-Item -Path Env:WINDOWS_CERTIFICATE_PASSWORD).Value
 
           $yamlFile = ".\pubspec.yaml"
           $yamlContent = Get-Content -Raw -Path $yamlFile
@@ -85,10 +87,9 @@ jobs:
           # $identityName = (Get-Item -Path Env:WINDOWS_IDENTITY_NAME).Value
           # $publisher = (Get-Item -Path Env:WINDOWS_PUBLISHER).Value
           # $publisherName = (Get-Item -Path Env:WINDOWS_PUBLISHER_NAME).Value
-          $certificatePassword = (Get-Item -Path Env:WINDOWS_CERTIFICATE_PASSWORD).Value
 
           # 使用 yq 更新多个字段
-          $updatedYamlContent = echo $yamlContent | yq e ".msix_config.certificate_path = `"$certificatePath`" | .msix_config.certificate_password = `"$certificatePassword`" | .msix_config.architecture = `"$env:Platform`" | del(.msix_config.identity_name) | del(.msix_config.publisher) | del(.msix_config.publisher_display_name)" -
+          $updatedYamlContent = echo $yamlContent | yq e ".msix_config.certificate_path = env(certificatePath) | .msix_config.certificate_password = `"$certificatePassword`" | .msix_config.architecture = `"$env:Platform`" | del(.msix_config.identity_name) | del(.msix_config.publisher) | del(.msix_config.publisher_display_name)" -
 
           # 将更新后的内容写回文件
           Set-Content -Path $yamlFile -Value $updatedYamlContent
