fix: replace `nuget restore` with `msbuild -restore`

--- a/.github/workflows/test-windows-msi-pro.yml
+++ b/.github/workflows/test-windows-msi-pro.yml
@@ -109,8 +109,7 @@ jobs:
           pushd ./msi
 
           python preprocess-pro.py --arp -d ../build/windows/$env:Platform/runner/Release -i ../windows/runner/resources/app_icon.ico -v "$env:VERSION_SHORT.$env:BUILD_NUMBER"
-          nuget restore picguard-pro.sln
-          msbuild picguard-pro.sln -p:Configuration="$env:Configuration" -p:Platform="$env:Platform" /p:TargetVersion=Windows10
+          msbuild picguard-pro.sln -restore -p:Configuration="$env:Configuration" -p:Platform="$env:Platform" /p:TargetVersion=Windows10
 
           $signtool = "C:\Program Files (x86)\Microsoft SDKs\ClickOnce\SignTool\signtool.exe"
           & $signtool sign /v /f "$certificatePath" /fd SHA256 /t http://timestamp.comodoca.com/authenticode /p "$env:WINDOWS_CERTIFICATE_PASSWORD_PRO" /n "$env:WINDOWS_PUBLISHER_NAME_PRO" (get-item ".\picguard-pro\bin\$env:Platform\$env:Configuration\*\*.msi")
