fix: set Xcode version to 26.2

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -514,7 +514,9 @@ jobs:
       - create-release
     steps:
       - name: Select Xcode version
-        run: sudo xcode-select --switch /Applications/Xcode_16.4.app
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '26.2'
 
       - name: print Xcode version
         run: xcodebuild -version
@@ -641,7 +643,9 @@ jobs:
       - create-release
     steps:
       - name: Select Xcode version
-        run: sudo xcode-select --switch /Applications/Xcode_16.4.app
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '26.2'
 
       - name: print Xcode version
         run: xcodebuild -version
