--- a/snap/snapcraft-pro.yaml
+++ b/snap/snapcraft-pro.yaml
@@ -16,6 +16,7 @@ license: GPL-3.0-only
 source-code: https://github.com/picguard/picguard
 issues: https://github.com/picguard/picguard/issues
 website: https://picguard.app
+donation: https://picguard.app/sponsors
 confinement: strict
 base: core22
 grade: stable
@@ -46,10 +47,14 @@ parts:
       - xz-utils
       - zip
       - libglu1-mesa
+      - lld
+      - llvm-14
+      - binutils
       - clang
       - cmake
       - ninja-build
       - pkg-config
+      - openjdk-21-jdk
       - libgtk-3-dev
       - liblzma-dev
       - libstdc++-12-dev
@@ -61,18 +66,17 @@ parts:
       - FLUTTER_VERSION: 3.38.9
       - FLUTTER_TARGET: lib/main_pro.dart
     override-build: |
-      # Sentry
-      apt update && apt install -y openjdk-21-jdk
-      
-      arch=$(uname -m)
-      if [[ "$arch" == "aarch64" ]]; then
-        export JAVA_HOME=/usr/lib/jvm/java-21-openjdk-arm64
-      elif [[ "$arch" == "x86_64" ]]; then
-        export JAVA_HOME=/usr/lib/jvm/java-21-openjdk-amd64
-      else
-        echo "Unknown arch"
+      set -eux
+
+      if [ ! -d "/usr/lib/llvm-14/bin" ]; then
+        echo "🟩 Removing flutter directory"
+        mkdir -p /usr/lib/llvm-14/bin
       fi
+      ln -sf "$(command -v ld.lld)" /usr/lib/llvm-14/bin/ld.lld
+      ln -sf "$(command -v ld)"     /usr/lib/llvm-14/bin/ld
       
+      # Sentry
+      export JAVA_HOME="$(dirname "$(dirname "$(readlink -f "$(which java)")")")"
       export PATH="$PATH":"$HOME/.pub-cache/bin":":$JAVA_HOME/bin"
 
       java -version
