--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,12 @@ dependencies:
     sdk: flutter
   flutter_easyloading: ^3.0.5
   flutter_expandable_fab: ^2.5.2
-  flutter_form_builder: ^10.2.0
+  flutter_form_builder: ^10.3.0+1
   flutter_localizations:
     sdk: flutter
   flutter_native_splash: ^2.4.7
   flutter_switch: ^0.3.2
-  form_builder_validators: ^11.2.0
+  form_builder_validators: ^11.3.0
   gap: ^3.0.1
   image_gallery_saver_plus: ^4.0.1
   image_picker: ^1.2.1
@@ -50,10 +50,10 @@ dependencies:
   permission_handler: ^12.0.1
   photo_view: ^0.15.0
   provider: ^6.1.5+1
-  sentry_flutter: ^9.10.0
-  sentry_logging: ^9.10.0
+  sentry_flutter: ^9.11.0
+  sentry_logging: ^9.11.0
   shared_preferences: ^2.5.4
-  slang_flutter: ^4.12.0
+  slang_flutter: ^4.12.1
   syncfusion_flutter_sliders: ^32.1.25
   synchronized: ^3.4.0
   tray_manager: ^0.5.2
@@ -66,8 +66,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   msix: ^3.16.13
-  slang_build_runner: ^4.12.0
-  very_good_analysis: ^10.0.0
+  slang_build_runner: ^4.12.1
+  very_good_analysis: ^10.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
