--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,10 +22,12 @@ environment:
 dependencies:
   about: ^2.2.0
   app_settings: ^7.0.0
+  app_updater: ^2.1.0
   bot_toast: ^4.1.3
   cupertino_icons: ^1.0.8
   desktop_drop: ^0.7.0
   device_info_plus: ^12.3.0
+  event_bus: ^2.0.1
   file_picker: ^10.3.10
   file_saver: ^0.3.1
   flutter:
