--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -97,5 +97,5 @@ parts:
       flutter pub get
 
       export SENTRY_NATIVE_BACKEND=breakpad
-      flutter build linux --release --dart-define-from-file=.env --target $FLUTTER_TARGET
+      flutter build linux --release --dart-define-from-file=.env --dart-define=UPDATES_ENABLED=true --target $FLUTTER_TARGET
       cp -r build/linux/*/release/bundle/* $CRAFT_PART_INSTALL/
