feat: in-app update (#594)
* fix: check updates

* fix: update vars

* fix: update translations

--- a/snap/snapcraft-pro.yaml
+++ b/snap/snapcraft-pro.yaml
@@ -101,5 +101,5 @@ parts:
       flutter pub get
       
       export SENTRY_NATIVE_BACKEND=breakpad
-      flutter build linux --release --dart-define-from-file=.env --target $FLUTTER_TARGET
+      flutter build linux --release --dart-define-from-file=.env --dart-define=CHECK_UPDATES=true --target $FLUTTER_TARGET
       cp -r build/linux/*/release/bundle/* $CRAFT_PART_INSTALL/
