--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,6 @@ dependencies:
   image_gallery_saver_plus: ^4.0.1
   image_picker: ^1.2.1
   keyboard_dismisser: ^3.0.0
-  logging: ^1.3.0
   menu_bar: ^0.5.3
   multi_image_picker_view: ^3.0.0
   nb_utils: ^7.2.0
@@ -58,6 +57,7 @@ dependencies:
   slang_flutter: ^4.12.1
   syncfusion_flutter_sliders: ^32.2.4
   synchronized: ^3.4.0
+  talker_flutter: ^5.1.13
   tray_manager: ^0.5.2
   url_launcher: ^6.3.2
   uuid: ^4.5.2
